--- a/ILIve/app/src/main/res/values/strings.xml
+++ b/ILIve/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="input_password">请输入密码</string>
     <string name="login">登录</string>
     <string name="log_out">退出登录</string>
+    <string name="safe_log_out">安全退出</string>
     <string name="switch_account">切换账号</string>
     <!--    <string name="register">同意并注册</string>-->
     <string name="account_register">账号注册</string>
@@ -58,7 +59,7 @@
     <string name="tab_tag_my">我的</string>
 
     <string name="main_title_setting">设置</string>
-    
+
     <!--  user info  -->
     <string name="user_info_item_nick_name">昵称</string>
     <string name="user_info_item_account">账号</string>
